# FAKT

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  biome.json  package.json  playwright.config.ts  tsconfig.base.json  tsconfig.wdio.json  turbo.json  wdio.conf.ts
.claude/: launch.json
.claude/skills/release/: SKILL.md
.github/ISSUE_TEMPLATE/: windows-codesign-v0.1.1.md
.github/launch-messages/: hacker-news.md  linkedin.md  product-hunt.md  twitter.md
.github/workflows/: ci.yml  crypto-ci.yml  e2e-release.yml  e2e.yml  release-alphaluppi.yml  release.yml
_bmad-output/: e2e-workflows-coverage.md  night-mission-plan.md  sprint-status.yaml  test-session-feedback-2026-04-24.md
apps/desktop/: Caddyfile.web  Dockerfile.web  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/.claude/: launch.json
apps/desktop/src/: App.tsx  main.tsx  shortcuts.test.ts  shortcuts.ts  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  audit.toml  tauri.conf.json
apps/desktop/src-tauri/binaries/: .gitignore
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: backend_config.rs  lib.rs  main.rs  sidecar.rs  trace.rs  win_console.rs
apps/desktop/src-tauri/src/ai/: cli.rs  json_extract.rs  mod.rs  sessions.rs
apps/desktop/src-tauri/src/commands/: audit_chain.rs  backend.rs  backup.rs  cycle.rs  email.rs  files.rs  mod.rs  pdf_hash.rs  ping.rs  signatures.rs  state.rs  updater.rs
apps/desktop/src-tauri/src/crypto/: audit.rs  audit_client.rs  cert.rs  commands.rs  error.rs  keychain.rs  mod.rs  pades.rs  tsa.rs  verify.rs
apps/desktop/src-tauri/src/pdf/: mod.rs  render.rs  text_hash.rs
apps/desktop/src-tauri/tests/: atomic_numbering.rs  cert_roundtrip.rs  pades_embed.rs  plugins_capabilities.rs  sidecar_port_discovery.rs  sign_document_e2e.rs  signature_freetsa_fixture.rs  signed_pdf_path_safety.rs  tsa_hash_correctness.rs  verify_signature.rs
apps/desktop/src/api/: activity.ts  auth.ts  backups.ts  client.test.ts  client.ts  clients.ts  index.ts  invoices.ts  numbering.ts  quotes.ts  render.ts  search.ts  services.ts  settings.ts  signatures.ts  workspace.ts
apps/desktop/src/components/: DesktopOnlyButton.test.tsx  DesktopOnlyButton.tsx  ErrorBoundary.tsx
apps/desktop/src/hooks/: useAuth.ts  useClients.ts  usePrestations.ts  useVerboseAiMode.test.ts  useVerboseAiMode.ts
apps/desktop/src/routes/: dashboard.test.tsx  dashboard.tsx
apps/desktop/src/stores/: useAuthStore.ts  useWorkspaceStore.ts
apps/desktop/src/styles/: globals.css  responsive.css
apps/desktop/src/utils/: render-bootstrap.ts  runtime.test.ts  runtime.ts
apps/desktop/tests/e2e/: archive-search.spec.ts  auth-flow.spec.ts  auth-mode2.spec.ts  backend-toggle.spec.ts  clients.spec.ts  dashboard.spec.ts  invoices.spec.ts  login-web.spec.ts  numbering-compliance.spec.ts  onboarding.spec.ts  pdf-and-email.spec.ts  quote-to-invoice-flow.spec.ts  (+6 more)
apps/desktop/tests/e2e-release/: routes-navigation.spec.ts  sidecar-health.spec.ts  smoke.spec.ts  tauri-commands.spec.ts  tsconfig.json
bmad/: config.yaml
deploy/: .env.example  Caddyfile.alphaluppi  README.md  backup.sh  docker-compose.dokploy.yml  docker-compose.yml
docs/: architecture.md  bmm-workflow-status.yaml  e-invoicing-reform-north-star.md  e2e-testing.md  multi-workspace-north-star.md  prd.md  product-brief.md  release-process.md  roadmap-post-v0.1.md  sprint-briefs-wave1.md  sprint-briefs-wave2.md  sprint-briefs-wave3.md  sprint-briefs-wave4.md  sprint-plan.md  sprint-status.yaml  testing-conventions.md
docs-site/: architecture.mdx  first-invoice.mdx  first-quote.mdx  installation.mdx  introduction.mdx  mint.json  signature.mdx
docs/branding/: refine-v1.html  showcase.html
docs/readme/: _INDEX.md  about.md  architecture-overview.md  contributing.md  design-system.md  faq.md  features.md  install.md  roadmap.md  security-compliance.md  self-hosting.md  troubleshooting.md  usage.md
docs/refacto-spec/: api-endpoints.md  architecture.md  task-breakdown.md  test-plan.md
docs/sprint-notes/: e2e-wiring-audit.md  post-release-polish.md  progress.md  track-f-manual-tests.md  v01-review-findings.md
docs/superpowers/plans/: 2026-05-02-audit-trail-and-conditional-clauses.md  2026-05-03-import-signed-quote.md
landing/: astro.config.mjs  package.json  tailwind.config.mjs
landing/src/components/: CTA.astro  FeatureCard.astro  Footer.astro  Hero.astro
landing/src/layouts/: Base.astro
landing/src/pages/: index.astro
scripts/: build-app-icon.ts  build-logos.ts  dev.sh  dev.ts  migrate-sqlite-to-postgres.ts  seed-users.ts
(+149 files in other folders)
