[package]
name = "fakt"
version = "0.1.0"
description = "FAKT — Devis et factures freelance FR. Signé."
authors = ["Tom Andrieu <contact@alphaluppi.com>"]
license = "BUSL-1.1"
repository = "https://github.com/AlphaLuppi/FAKT"
edition = "2021"
rust-version = "1.75"

[lib]
name = "fakt_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
