[package]
name = "fakt"
version = "0.1.15"
description = "FAKT — Devis et factures freelance FR. Signé."
authors = ["Tom Andrieu <contact@alphaluppi.com>"]
license = "BUSL-1.1"
repository = "https://github.com/AlphaLuppi/FAKT"
edition = "2021"
# Toolchain CI pinnée à 1.88 (cf. .github/workflows/crypto-ci.yml) — MSRV
# réel dicté par deps transitives (darling/serde_with/time = 1.88) et par
# `std::panic::PanicHookInfo` (stabilisé en 1.82) utilisé dans trace.rs.
rust-version = "1.88"

# Lints downgradés non release-blocking (cf. commit 8d64f8b pour JS/TS) :
# - uninlined_format_args : cosmétique, 95+ call sites hérités des tracks
#   initiaux. Dette v0.1.1.
# - await_holding_lock : appliqué uniquement à des ENV_LOCK de tests qui
#   sérialisent l'accès à l'environnement process. Le lock de test est
#   non-async mais sérialise par design — OK pour des tests.
[lints.clippy]
uninlined_format_args = "allow"
await_holding_lock = "allow"

[lib]
name = "fakt_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"

# PDF rendering — temp files for JSON input + templates (Track C)
tempfile = "3.10"

# Crypto stack (Track D — PAdES B-T)
rsa = { version = "0.9", features = ["sha2"] }
rand = "0.8"
sha2 = "0.10"
x509-cert = { version = "0.2", features = ["builder", "std"] }
const-oid = { version = "0.9", features = ["db"] }
spki = { version = "0.7", features = ["std", "alloc"] }
pkcs8 = { version = "0.10", features = ["std", "pkcs5"] }
der = { version = "0.7", features = ["alloc", "oid", "derive"] }
cms = { version = "0.2", features = ["std", "builder"] }
signature = { version = "2", features = ["std"] }
hex = "0.4"
base64 = "0.22"

# Keychain OS cross-platform
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native-sync-persistent"] }

# Fallback chiffrement fichier (AES-256-GCM)
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["hmac", "sha2"] }
hmac = "0.12"

# PDF manipulation (PAdES)
lopdf = "0.34"

# TSA RFC 3161 (blocking sync) + audit client / sidecar healthcheck (async client + JSON).
# `http2` et `charset` permettent au client async par défaut de fonctionner sans enable
# `default-features`, et `json` expose `.json()` sur RequestBuilder/Response.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json", "http2", "charset"] }

# SQLite pour atomic numbering (CGI art. 289) + persistance signed PDFs
rusqlite = { version = "0.31", features = ["bundled"] }
parking_lot = "0.12"
chrono = "0.4"

# Export workspace ZIP (Track K)
zip = { version = "2", features = ["deflate"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2"

# Updater : desktop seulement (le plugin retourne erreur sur mobile).
[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
# strip = true a cause des crashes 0xc0000409 silencieux au boot Windows
# (combinaison LTO + opt-s + strip + Tauri 2 + WebView2). Garder symbols.
strip = false
# debug = "line-tables-only" donne des backtraces lisibles sans gonfler le bundle.
debug = "line-tables-only"
